# redis-rdb-parser

./: .gitignore  .gitmodules  Build.hs  README.md  build.sh  generate_dump.sh  redis-rdb-parser.cabal  stack.yaml
src/Database/Redis/: RDB.hs
test/: Main.hs
test/data/: example.conf  example.rdb
